# empyrical

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/empyrical/: __init__.py  stats.py  utils.py
