[project]
name = "empyrical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xuanq", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
empyrical = "empyrical:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
