[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "empyrical"
version = "0.6.0"
description = "empyrical is a Python library with performance and risk statistics commonly used in quantitative finance"
authors = [
    {name = "xuanqi", email = "xuanqiraphael@gmail.com"}
]
license = {text = "Apache License, Version 2.0"}
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]

[project.urls]
"Homepage" = "https://github.com/xuanq/empyrical"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.setuptools.packages.find]
where = ["src"]